fixed top alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,14 +22,14 @@ h3{
   position: absolute;
   top:0;
   right:0;
-  padding-top: 40px;
+  padding-top: 7vw;
   padding-right: 10px;
 }
 .top-align-text-left {
   position: absolute;
   top:0;
   left:0;
-  padding-top: 60px;
+  padding-top: 7vw;
   padding-left: 10px;
 }
 }
@@ -61,14 +61,12 @@ h3{
   position: absolute;
   top:0;
   right:0;
-  padding-top: 60px;
   padding-right: 10px;
 }
 .top-align-text-left {
   position: absolute;
   top:0;
   left:0;
-  padding-top: 80px;
   padding-left: 10px;
 }
 }
@@ -97,14 +95,12 @@ h3{
   position: absolute;
   top:0;
   right:0;
-  padding-top: 95px;
   padding-right: 10px;
 }
 .top-align-text-left {
   position: absolute;
   top:0;
   left:0;
-  padding-top: 115px;
   padding-left: 10px;
 }
 }
